--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
+    "test": "jest",
     "build": "npx tsc",
     "dev": "nodemon --ignore src/database src/server.ts",
     "start": "nodemon dist/server.js"
@@ -21,7 +22,10 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
